# testing-rkb0023

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: api.py  chat.py  monitoring.py
app/config/: config.py
app/core/: base_service.py  data_processor.py  dependencies.py  logging_config.py  monitoring.py
app/models/: document.py
app/schemas/: chat.py
app/services/: base_service.py  chat_service.py  document_service.py  monitoring_service.py
app/static/: app.js  index.html  styles.css
app/test/: test_utils.py
app/utils/: legal_tools.py  legal_updates.py  pdf_processor.py
scripts/: ingest_legal_updates.py  ingest_pdf.py  init_data.py  reingest_documents.py
